# settracker

./: .gitignore  README.md  README.rst  pyproject.toml  setup.py
settracker/: __main__.py  models.py  reporting.py  util.py
src/settracker/: __main__.py  app.css  app.py  models.py  reporting.py  util.py
