[tool.poetry]
name = "settracker"
version = "0.1.0"
description = "Track sets of exercises (or sets of anything)"
authors = ["Wyatt Baldwin"]
license = "MIT"
readme = "README.rst"

packages = [
    { include = "settracker", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.7"
SQLAlchemy = "^1.4"

[tool.poetry.group.dev.dependencies]
black = "*"

[tool.poetry.scripts]
set-tracker = "settracker.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
