[tool.poetry]
name = "settracker"
version = "0.0.0"
description = "Track sets of exercises (or sets of anything)"
authors = ["Wyatt Baldwin"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "settracker", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
SQLAlchemy = "^1.4"
textual = {extras = ["dev"], version = "^0.9.1"}

[tool.poetry.group.dev.dependencies]
black = "*"

[tool.poetry.scripts]
settracker = "settracker.__main__:main"
set-tracker = "settracker.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
